--- a/app/static/CSS/dark_mode.css
+++ b/app/static/CSS/dark_mode.css
@@ -199,6 +199,21 @@
     border-left: 1px solid white;
     border-bottom: 1px solid white;
   }
+  .test-height{
+    min-height: 200px;
+  }
+  
+  .star > button {
+    color: grey;
+  }
+  .star:hover > button {
+    color: #03dac5;
+    text-shadow: 0px 0px 2px rgb(255, 255, 78);
+  }
+  .evaluation-container{
+    display: none;
+    overflow: hidden;
+  }
 
 
   #sign-in-form {
@@ -307,7 +322,15 @@
     .on-phone{display:block;}
     .full-on-phone{width: 100%;}
     .options-device-adjust{
-    width:100%;
+      width:100%;
+    }
   }
 
+  @media screen and (max-width:350px) {
+    .extra-I{
+      display: none;
+    }
+    .replace-extra{
+      font-size: 20px;
+    }
   }
