--- a/app/static/CSS/dark_mode.css
+++ b/app/static/CSS/dark_mode.css
@@ -73,6 +73,10 @@
     width: 100%;
   }
 
+  .grid{
+    display:grid;
+  }
+
   .shine-on-f:focus{
     box-shadow: 0px 0px 8px aliceblue;
   }
@@ -221,7 +225,7 @@
   }
 
   #navbar {
-    padding: 10px;
+    /* padding: 10px; */
     box-shadow: 0px 0px 4px #222;
   }
 
